--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body background="background.jpg">
    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
    <br><br><br><br><br><br>
-   
+<div>   
 <marquee direction="left">
     <img src = "ham.gif" /> &emsp; &emsp; &emsp; &emsp;
     <img src = "cat.gif" />
 </marquee>
+    </div>
 </body>
