--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <img src = "ham.gif" /> &emsp; &emsp; &emsp; &emsp;
     <img src = "cat.gif" />
 </marquee>
-    <button>"Youtube"</button>
+    <button>Youtube</button>
     </div>
 </body>
