--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <img src = "cat.gif" />
 </marquee>
     <button>Youtube</button>
+    <a href="https://www.youtube.com/" target="blank">
+  Link to YouTube
+</a>
     </div>
 </body>
