--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 </style>
 
 <body background="background.jpg">
-   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+   <div>
+    <button>Youtube</button>
+    <a href="https://www.youtube.com/" target="blank"></a>
+    </div>
+  Link to YouTube
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
    <br><br><br><br><br><br>
 <div>   
 <marquee direction="left">
     <img src = "ham.gif" /> &emsp; &emsp; &emsp; &emsp;
     <img src = "cat.gif" />
 </marquee>
-    <button>Youtube</button>
-    <a href="https://www.youtube.com/" target="blank">
-  Link to YouTube
-</a>
+   
+
     </div>
 </body>
