--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
         background-repeat : no-repeat;
         background-size: 100%
-  
+    }
+    button{
+        background-color : red;
+        
     }
 </style>
 
