--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body background="background.jpg">
 <div>
     <button>Youtube</button>
-    <a href="https://www.youtube.com/" target="blank"></a>
+    <a href="https://www.youtube.com/" target="blank">
     Link to YouTube
+    </a>
 </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
    <br><br><br><br><br><br>
