--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
         background-size: 100%
     }
     button{
-        background-color : red;
+        background-color : rgb(200,0,0);
+        color : white;
+        border : none;
+        width : 105px;
+        height: 36px;
+        border-radius : 2px;
+        cursor: pointer;
+            
         
     }
 </style>
