--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body background="background.jpg">
 <div>
     <button>Youtube</button>
-    <a href="https://www.youtube.com/" target="blank">
-    Link to YouTube
+    <a href="https://www.youtube.com/" class= "button" target="blank">
+    Youtube
     </a>
 </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
